--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   
     <div class="form">
-        <h1>Формула Всемирной организации здравоохранения</h1>
+        <h1>Проверка</h1>
         <input class="form-inputs__input valid" id="connectionType" name="connectionType" type="name" oninput="(function(e){e.setCustomValidity(''); return !e.validity.valid &amp;&amp; e.setCustomValidity(' ')})(this)" oninvalid="this.setCustomValidity(' ')">
         <div class="weight">
-            <h3>Вес:</h3>
+            <h3></h3>
             <span>
                 <span contenteditable="false"  id="myValue"></span>
             </span>
