--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   
     <div class="form">
-        <h1>Проверка</h1>
+        <h1>Проверка2</h1>
         <input class="form-inputs__input valid" type="name" oninput="(function(e){e.setCustomValidity(''); return !e.validity.valid &amp;&amp; e.setCustomValidity(' ')})(this)" oninvalid="this.setCustomValidity(' ')">
         <div class="weight">
             <h3></h3>
